base/src/test/resources/failure/projection/ix-too-large.aya.txt
In file $FILE:1:42 ->

  1 | def test (A B : Type) (p : Sig A ** B) => p.3
                                                ^-^

Error: Cannot project the 3rd element because the type has index range [1, 2]
What are you doing?
